# finger-paint-wgpu

./: Cargo.toml  compile_glsl.sh
res/: grass.glb  grass.mtl
src/: camera.rs  constants.rs  instance.rs  lib.rs  light.rs  new.rs  render.rs  render_passes.rs  resize.rs  text.rs  texture.rs  transform.rs  uniforms.rs  update.rs
src/api/: lights.rs  meshes.rs  mod.rs
src/color_mesh/: instance.rs  mesh.rs  mod.rs  shader.wgsl  vertex.rs
src/lines/: all_lines.rs  line.rs  mod.rs  shader.wgsl  vertex.rs
src/model/: bake.glsl  bake.glsl.spv  bake.wgsl  fs.glsl  fs.glsl.spv  material.rs  mesh.rs  mod.rs  vertex.rs  vs.glsl  vs.glsl.spv
src/model_mesh/: mesh.rs  mod.rs  shader.wgsl  vertex.rs
src/render_passes/: color.rs  line.rs  mod.rs  model.rs  shader_compiler.rs  shader_reload.rs  uv.rs
src/uv_mesh/: mesh.rs  mod.rs  shader.wgsl  vertex.rs
