[package]
name = "finger_paint_wgpu"
version = "0.2.0"
authors = ["Jasper Reef <jasper.reef@gmx.de>"]
edition = "2018"

[dependencies]
futures = "*"
winit = "*"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18.0"
wgpu = "0.7.0"
async-executor = "1.0"
wgpu-subscriber = "0.1"
log = "*"
pollster = "*"
simple_winit = { path = "../simple_winit/" }
wgpu_glyph = "0.11.0"
image = "*"
notify = "4.0.15"